some modification done, configuration starts, now begins work on real machine

--- a/UNI-PRINT-3D.ini
+++ b/UNI-PRINT-3D.ini
@@ -152,8 +152,8 @@ ARC_BLEND_OPTIMIZATION_DEPTH = 70
 ARC_BLEND_GAP_CYCLES = 4
 ARC_BLEND_RAMP_FREQ = 20
 
-AXES =                      3
-COORDINATES =               X Y Z
+AXES =                      4
+COORDINATES =               X Y Z A
 MAX_ANGULAR_VELOCITY =      45.00
 DEFAULT_ANGULAR_VELOCITY =  4.50
 LINEAR_UNITS =              mm
@@ -187,8 +187,8 @@ TYPE =              LINEAR
 MAX_VELOCITY =       300.0
 MAX_ACCELERATION =   6000.0
 # Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    36.0
-STEPGEN_MAX_ACC =    7200.0
+STEPGEN_MAXVEL =    36.0
+STEPGEN_MAXACC =    7200.0
 
 BACKLASH =           0.000
 
@@ -304,9 +304,31 @@ STEPSPACE  =              1000
 
 INCREMENTS = 0.01 0.1 1
 
+[AXIS_3]
+
+TYPE =                          ANGULAR
+HOME =                          0.000
+MAX_VELOCITY =                  50
+MAX_ACCELERATION =              1000.0
+STEPGEN_MAXACCEL =              7001.0
+BACKLASH =                      0.000
+SCALE =                         145.6
+OUTPUT_SCALE =                  1.000
+MIN_LIMIT =                     -99999999
+MAX_LIMIT =                     999999999.0
+FERROR =                        0.050
+MIN_FERROR =                    0.010
+HOME_OFFSET =                   0.0
+HOME_SEARCH_VEL =               0.0
+HOME_LATCH_VEL =                0.0
+HOME_USE_INDEX =                NO
+HOME_IGNORE_LIMITS =            NO
+
+
+
 [ABP]
-STEPGEN_MAX_VEL =    20.0
-STEPGEN_MAX_ACC =    200.0
+STEPGEN_MAXVEL =    20.0
+STEPGEN_MAXACC =    200.0
 SCALE = 1600.0
 
 [EXTRUDER_0]
