--- a/UNI-PRINT-3D.ini
+++ b/UNI-PRINT-3D.ini
@@ -17,8 +17,8 @@ DEBUG = 0
 [DISPLAY]
 
 # Name of display program, e.g., tkemc
-DISPLAY = mkwrapper
-
+#DISPLAY = mkwrapper
+DISPLAY = axis
 # Cycle time, in seconds, that display will sleep between polls
 CYCLE_TIME =            0.100
 
@@ -140,7 +140,7 @@ HALFILE = uni_print_3d.py
 # list of halcmd commands to execute
 # commands are executed in the order in which they appear
 #HALCMD =               save neta
-
+#HALUI= halui
 #POSTGUI_HALFILE =       TCT3D.postgui.hal
 
 
@@ -169,140 +169,62 @@ TIME_UNITS =                s
 
 [AXIS_0]
 
-# 
-# Step timing is 40 us steplen + 40 us stepspace
-# That gives 80 us step period = 12.5 KHz step freq
-#
-# Bah, even software stepping can handle that, hm2 doesnt buy you much with
-# such slow steppers.
-#
-# Scale is 200 steps/rev * 5 revs/inch = 1000 steps/inch
-#
-# This gives a maxvel of 12.5/1 = 12.5 ips
-#
-
-
 TYPE =              LINEAR
-# absolute maximum is ~450
-MAX_VELOCITY =       300.0
-MAX_ACCELERATION =   6000.0
-# Set Stepgen max 20% higher than the axis
-STEPGEN_MAXVEL =    36.0
-STEPGEN_MAXACC =    7200.0
-
+MAX_VELOCITY =       50
+MAX_ACCELERATION =   1000.0
+STEPGEN_MAXACC =    7001.0
 BACKLASH =           0.000
-
-# scale is 200 steps/rev * 5 revs/inch
-# SCALE =  80.4 -- Artifex
-SCALE = 71.13
-
-MIN_LIMIT =             -105.0
-MAX_LIMIT =             105.0
-
-FERROR =     1.0
-MIN_FERROR = 0.1
-
-HOME =                  0.000
-HOME_OFFSET =          105.00
-HOME_IGNORE_LIMITS =    YES
-HOME_USE_INDEX =        NO
-HOME_SEQUENCE =         1
-
-# Set to zero if you don't have physical home/limit switches
-# Set to the desired homing and latch velocity if you have switches
-# See: http://www.linuxcnc.org/docs/2.5/html/config/ini_homing.html
-HOME_SEARCH_VEL =      30.0
-HOME_LATCH_VEL =       -5.0
-
-# these are in nanoseconds
-DIRSETUP   =              200
-DIRHOLD    =              200
-STEPLEN    =              1000
-STEPSPACE  =              1000
-
-INCREMENTS = 1 10
+SCALE = 82.15
+MIN_LIMIT =                     -1000.0
+MAX_LIMIT =                     1500.0
+FERROR =                        0.050
+MIN_FERROR =                    0.010
+HOME =                          1287.6
+HOME_OFFSET =                   1289.6
+HOME_SEARCH_VEL =               -20.0
+HOME_LATCH_VEL =                1.0
+HOME_USE_INDEX =                NO
+HOME_IGNORE_LIMITS =            YES
+HOME_FINAL_VEL = 1.0
 
 [AXIS_1]
-
 TYPE =              LINEAR
-# absoulute maximum is ~380
-MAX_VELOCITY =       300.0
-MAX_ACCELERATION =   5000.0
-# Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    360.0
-STEPGEN_MAX_ACC =    6000.0
-
+MAX_VELOCITY =       50
+MAX_ACCELERATION =   1000.0
+STEPGEN_MAXACC =    7001.0
 BACKLASH =           0.000
+SCALE = 82.15
+MIN_LIMIT =                     -1000.0
+MAX_LIMIT =                     1500.0
+FERROR =                        0.050
+MIN_FERROR =                    0.010
+HOME =                          1287.6
+HOME_OFFSET =                   1289.6
+HOME_SEARCH_VEL =               -20.0
+HOME_LATCH_VEL =                1.0
+HOME_USE_INDEX =                NO
+HOME_IGNORE_LIMITS =            YES
+HOME_FINAL_VEL = 1.0
 
-#SCALE =  80.4 -- Artifex
-SCALE = 71.13
-
-MIN_LIMIT =             -150.0
-MAX_LIMIT =             150.0
-
-FERROR =     1.0
-MIN_FERROR = 0.1
-
-HOME =                  15.500
-HOME_OFFSET =           150.00
-HOME_IGNORE_LIMITS =    YES
-HOME_USE_INDEX =        NO
-HOME_SEQUENCE =         1
-
-# Set to zero if you don't have physical home/limit switches
-# Set to the desired homing and latch velocity if you have switches
-# See: http://www.linuxcnc.org/docs/2.5/html/config/ini_homing.html
-HOME_SEARCH_VEL =       30.0
-HOME_LATCH_VEL =        -5.0
-
-# these are in nanoseconds
-DIRSETUP   =              200
-DIRHOLD    =              200
-STEPLEN    =              1000
-STEPSPACE  =              1000
-
-INCREMENTS = 1 10
 
 [AXIS_2]
-
 TYPE =              LINEAR
-# absolute maximum is ~25
-MAX_VELOCITY =      20.0
-MAX_ACCELERATION =  1600.0
-# Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    24.0
-STEPGEN_MAX_ACC =    1920.0
-
+MAX_VELOCITY =       50
+MAX_ACCELERATION =   1000.0
+STEPGEN_MAXACC =    7001.0
 BACKLASH =           0.000
-
-#SCALE = -1542.036 -- Artifex
-SCALE = -1600.0
-
-MIN_LIMIT =             -22.0
-MAX_LIMIT =             240.0
-
-FERROR =     1.0
-MIN_FERROR = 0.1
-
-HOME =                  0.000
-HOME_OFFSET =           0.00
-HOME_IGNORE_LIMITS =    YES
-HOME_USE_INDEX =        NO
-HOME_SEQUENCE =         0
-
-# Set to zero if you don't have physical home/limit switches
-# Set to the desired homing and latch velocity if you have switches
-# See: http://www.linuxcnc.org/docs/2.5/html/config/ini_homing.html
-HOME_SEARCH_VEL =       -2.0
-HOME_LATCH_VEL  =       0.05
-
-# these are in nanoseconds
-DIRSETUP   =              200
-DIRHOLD    =              200
-STEPLEN    =              1000
-STEPSPACE  =              1000
-
-INCREMENTS = 0.01 0.1 1
+SCALE = 82.15
+MIN_LIMIT =                     -1000.0
+MAX_LIMIT =                     1500.0
+FERROR =                        0.050
+MIN_FERROR =                    0.010
+HOME =                          1287.6
+HOME_OFFSET =                   1289.6
+HOME_SEARCH_VEL =               -20.0
+HOME_LATCH_VEL =                1.0
+HOME_USE_INDEX =                NO
+HOME_IGNORE_LIMITS =            YES
+HOME_FINAL_VEL = 1.0
 
 [AXIS_3]
 
@@ -327,9 +249,9 @@ HOME_IGNORE_LIMITS =            NO
 
 
 [ABP]
-STEPGEN_MAXVEL =    20.0
-STEPGEN_MAXACC =    200.0
-SCALE = 1600.0
+# STEPGEN_MAXVEL =    20.0
+STEPGEN_MAXACC =    7001.0
+SCALE = 82.15
 
 [EXTRUDER_0]
 PID_PGAIN              = 0.22
