--- a/UNI-PRINT-3D.ini
+++ b/UNI-PRINT-3D.ini
@@ -17,8 +17,8 @@ DEBUG = 0
 [DISPLAY]
 
 # Name of display program, e.g., tkemc
-#DISPLAY = mkwrapper
-DISPLAY = axis
+DISPLAY = mkwrapper
+#DISPLAY = axis
 # Cycle time, in seconds, that display will sleep between polls
 CYCLE_TIME =            0.100
 
@@ -140,7 +140,7 @@ HALFILE = uni_print_3d.py
 # list of halcmd commands to execute
 # commands are executed in the order in which they appear
 #HALCMD =               save neta
-#HALUI= halui
+HALUI= halui
 #POSTGUI_HALFILE =       TCT3D.postgui.hal
 
 
