--- a/UNI-PRINT-3D.ini
+++ b/UNI-PRINT-3D.ini
@@ -75,7 +75,7 @@ CYCLE_TIME =            0.010
 [RS274NGC]
 
 # File containing interpreter variables
-PARAMETER_FILE =        pru-stepper.var
+# PARAMETER_FILE =        pru-stepper.var
 
 # subroutine path for the custom FDM printing .ngc files used for remapping
 # use directory in config path until more suitable location. this w.r.t the
@@ -152,8 +152,8 @@ ARC_BLEND_OPTIMIZATION_DEPTH = 70
 ARC_BLEND_GAP_CYCLES = 4
 ARC_BLEND_RAMP_FREQ = 20
 
-AXES =                      4
-COORDINATES =               X Y Z A
+AXES =                      3
+COORDINATES =               X Y Z 
 MAX_ANGULAR_VELOCITY =      45.00
 DEFAULT_ANGULAR_VELOCITY =  4.50
 LINEAR_UNITS =              mm
