--- a/UNI-PRINT-3D.ini
+++ b/UNI-PRINT-3D.ini
@@ -147,8 +147,8 @@ ARC_BLEND_OPTIMIZATION_DEPTH = 70
 ARC_BLEND_GAP_CYCLES = 4
 ARC_BLEND_RAMP_FREQ = 20
 
-AXES =                      3
-COORDINATES =               X Y Z
+AXES =                      4
+COORDINATES =               X Y Z A
 MAX_ANGULAR_VELOCITY =      45.00
 DEFAULT_ANGULAR_VELOCITY =  4.50
 LINEAR_UNITS =              mm
