--- a/UNI-PRINT-3D.ini
+++ b/UNI-PRINT-3D.ini
@@ -130,8 +130,8 @@ SERVO_PERIOD =          1000000
 # list of hal config files to run through halcmd
 # files are executed in the order in which they appear
 
+HALFILE = ilowpassdimerda.hal
 HALFILE = uni_print_3d.py
-
 # list of halcmd commands to execute
 # commands are executed in the order in which they appear
 #HALCMD =               save neta
