--- a/UNI-PRINT-3D.ini
+++ b/UNI-PRINT-3D.ini
@@ -181,6 +181,7 @@ HOME_LATCH_VEL =                1.0
 HOME_USE_INDEX =                NO
 HOME_IGNORE_LIMITS =            YES
 HOME_FINAL_VEL = 1.0
+HOME_SEQUENCE =                 0
 
 [AXIS_1]
 TYPE =              LINEAR
@@ -200,6 +201,7 @@ HOME_LATCH_VEL =                1.0
 HOME_USE_INDEX =                NO
 HOME_IGNORE_LIMITS =            YES
 HOME_FINAL_VEL = 1.0
+HOME_SEQUENCE =                 0
 
 
 [AXIS_2]
@@ -220,6 +222,7 @@ HOME_LATCH_VEL =                1.0
 HOME_USE_INDEX =                NO
 HOME_IGNORE_LIMITS =            YES
 HOME_FINAL_VEL = 1.0
+HOME_SEQUENCE =                 0
 
 [AXIS_3]
 
@@ -239,8 +242,8 @@ HOME_OFFSET =                   0.0
 HOME_SEARCH_VEL =               0.0
 HOME_LATCH_VEL =                0.0
 HOME_USE_INDEX =                NO
-HOME_IGNORE_LIMITS =            NO
-
+HOME_IGNORE_LIMITS =            YES
+HOME_SEQUENCE =                 0
 
 
 [ABP]
