added telegrambot, reversed A axis, zone_test imported

--- a/UNI-PRINT-3D.ini
+++ b/UNI-PRINT-3D.ini
@@ -165,7 +165,7 @@ TIME_UNITS =                s
 [AXIS_0]
 
 TYPE =              LINEAR
-MAX_VELOCITY =       50
+MAX_VELOCITY =       45
 MAX_ACCELERATION =   1000.0
 STEPGEN_MAXACC =    7001.0
 BACKLASH =           0.000
@@ -173,9 +173,9 @@ SCALE = 82.15
 MIN_LIMIT =                     -1000.0
 MAX_LIMIT =                     1500.0
 FERROR =                        0.090
-MIN_FERROR =                    0.010
-HOME =                          1287.2
-HOME_OFFSET =                   1289.2
+MIN_FERROR =                    10
+HOME =                          1287.6
+HOME_OFFSET =                   1289.6
 HOME_SEARCH_VEL =               -20.0
 HOME_LATCH_VEL =                1.0
 HOME_USE_INDEX =                NO
@@ -185,7 +185,7 @@ HOME_SEQUENCE =                 0
 
 [AXIS_1]
 TYPE =              LINEAR
-MAX_VELOCITY =       50
+MAX_VELOCITY =       45
 MAX_ACCELERATION =   1000.0
 STEPGEN_MAXACC =    7001.0
 BACKLASH =           0.000
@@ -193,9 +193,9 @@ SCALE = 82.15
 MIN_LIMIT =                     -1000.0
 MAX_LIMIT =                     1500.0
 FERROR =                        0.090
-MIN_FERROR =                    0.010
-HOME =                          1287.2
-HOME_OFFSET =                   1289.2
+MIN_FERROR =                    10
+HOME =                          1287.6
+HOME_OFFSET =                   1289.6
 HOME_SEARCH_VEL =               -20.0
 HOME_LATCH_VEL =                1.0
 HOME_USE_INDEX =                NO
@@ -206,7 +206,7 @@ HOME_SEQUENCE =                 0
 
 [AXIS_2]
 TYPE =              LINEAR
-MAX_VELOCITY =       50
+MAX_VELOCITY =       45
 MAX_ACCELERATION =   1000.0
 STEPGEN_MAXACC =    7001.0
 BACKLASH =           0.000
@@ -214,9 +214,9 @@ SCALE = 82.15
 MIN_LIMIT =                     -1000.0
 MAX_LIMIT =                     1500.0
 FERROR =                        0.090
-MIN_FERROR =                    0.010
-HOME =                          1287.2
-HOME_OFFSET =                   1289.2
+MIN_FERROR =                    10
+HOME =                          1287.6
+HOME_OFFSET =                   1289.6
 HOME_SEARCH_VEL =               -20.0
 HOME_LATCH_VEL =                1.0
 HOME_USE_INDEX =                NO
@@ -228,28 +228,22 @@ HOME_SEQUENCE =                 0
 
 TYPE =                          ANGULAR
 HOME =                          0.000
-MAX_VELOCITY =                  50
+MAX_VELOCITY =                  45
 MAX_ACCELERATION =              1000.0
-STEPGEN_MAXACCEL =              7001.0
+STEPGEN_MAXACC =                7001.0
 BACKLASH =                      0.000
 SCALE =                         145.6
 OUTPUT_SCALE =                  1.000
 MIN_LIMIT =                     -99999999
 MAX_LIMIT =                     999999999.0
 FERROR =                        0.050
-MIN_FERROR =                    0.010
+MIN_FERROR =                    10
 HOME_OFFSET =                   0.0
 HOME_SEARCH_VEL =               0.0
 HOME_LATCH_VEL =                0.0
 HOME_USE_INDEX =                NO
 HOME_IGNORE_LIMITS =            YES
 HOME_SEQUENCE =                 0
-
-
-[ABP]
-# STEPGEN_MAXVEL =    20.0
-STEPGEN_MAXACC =    7001.0
-SCALE = 145.6
 
 [EXTRUDER_0]
 PID_PGAIN              = 0.22
@@ -274,17 +268,17 @@ EXTRUDE_SCALE          = 1.00
 
 FAN_BIAS               = 0.56
 
-MAX_VELOCITY = 32.0
-MAX_ACCELERATION = 3000.0
+#MAX_VELOCITY = 32.0
+#MAX_ACCELERATION = 3000.0
 # Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL = 37.0
-STEPGEN_MAX_ACC = 3600.0
+#STEPGEN_MAX_VEL = 37.0
+#STEPGEN_MAX_ACC = 3600.0
 
 #SCALE = -486.15 -- Artifex
 #SCALE = 495.0 -- Bulldog XL
 #SCALE = -107.0 -- Bulldog Lite Original
 #SCALE = -90.0
-SCALE = -107.0
+#SCALE = -107.0
 
 # these are in nanoseconds
 DIRSETUP   =              200
